kubernetes-lab/nginx-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-nodeport

spec:
  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080

  type: NodePort
